Fix items table spinner off-center. Fix #518

--- a/src/scss/components/item/_table.scss
+++ b/src/scss/components/item/_table.scss
@@ -5,6 +5,7 @@
 .items-table-wrap {
 	flex: 1 1 auto;
 	flex-direction: column;
+	position: relative;
 
 	&.reordering {
 		cursor: move; // IE
